<?xml version="1.0"?>
<package format="2">
  <name>hardware_communication_lib</name>
  <version>0.2.0</version>
  <description>Communication Library between ROS2 and Hardware, developped for shipcon2</description>

  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">Wada Suisei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>